<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_top_title"
            android:gravity="center"
            android:textColor="@color/placeholder_color"
            android:textSize="26sp"
            android:textStyle="bold"
            android:id="@+id/game_activity_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_opponent_strategy"
            android:gravity="center"
            android:layout_marginVertical="16dp"
            android:textStyle="bold"
            android:id="@+id/game_activity_opponent_strategy"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/game_activity_table"
            android:stretchColumns="*"
            android:layout_marginVertical="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/game_activity_table_row_1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:id="@+id/game_activity_table_cell_1_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="A"
                    android:background="@color/action_a"
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_1_2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="B"
                    android:background="@color/action_b"
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_1_3"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/game_activity_table_row_2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="A"
                    android:background="@color/action_a"
                    android:id="@+id/game_activity_table_cell_2_1"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_2_2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_2_3"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/game_activity_table_row_3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="B"
                    android:background="@color/action_b"
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_3_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_3_2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20sp"
                    android:id="@+id/game_activity_table_cell_3_3"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_hint_1"
            android:gravity="center"
            android:textColor="@color/placeholder_color"
            android:id="@+id/game_activity_hint_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_hint_2"
            android:textColor="@color/placeholder_color"
            android:gravity="center"
            android:id="@+id/game_activity_hint_2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="vertical"
            android:id="@+id/game_activity_actions">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/game_activity_choose_action"
                android:layout_gravity="center"
                android:gravity="center"
                android:tag="A"
                android:id="@+id/game_activity_action_a"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/game_activity_choose_action"
                android:layout_gravity="center"
                android:gravity="center"
                android:tag="B"
                android:id="@+id/game_activity_action_b"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_result_label"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_result"
            android:gravity="center"
            android:id="@+id/game_activity_result"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_dismiss"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:id="@+id/game_activity_dismiss_button"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>